# griffin-lim

./: Cargo.toml  README.md
.github/workflows/: checks.yml
doc/: README.md  generate_plots.py
examples/: run_griffin_lim.rs
resources/: example_spectrogram.npy  griffinlim_input.npy  griffinlim_output.npy  irfft_input.npy  irfft_output.npy  istft_input.npy  istft_output.npy  mel_basis.npy  nnls_output.npy  pinv_output.npy
scripts/: generate_test_input.py
src/: lib.rs  mel.rs
tutorial/: .gitignore  README.md  generate_plots.py  hello_world.npy  requirements.txt
