[package]
name = "griffin-lim"
version = "0.2.0"
edition = "2021"

[features]
default = ["ndarray-linalg/intel-mkl"]
# Do not use me unless you want a lot of npy files dumped in your CWD
debug_dump = ["ndarray-npy"]

[dependencies]
anyhow = "1.0.71"
lbfgsb = "0.1.0"
ndarray = { version = "0.15.6", features = ["approx", "rayon"] }
ndarray-linalg = "0.16.0"
ndarray-npy = { version = "0.8.1", optional = true }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rand = "0.8.5"
realfft = "3.3.0"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
approx = "0.5.1"
clap = { version = "4.4.7", features = ["derive"] }
float-cmp = "0.9.0"
hound = "3.5.1"
ndarray-npy = "0.8.1"
rand_isaac = "0.3.0"
